data/derived/sp14/progs/unify/prog4565.ml.out
Characters 27-34:
  let digits n = digitsOfInt (abs n);;
                             ^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
